--- a/main.css
+++ b/main.css
@@ -194,6 +194,53 @@ span{
     margin: -5em 0 0 0;
 }
 
+footer{
+    background: #2193b0;
+    color: #fff;
+    padding: 20px 0;
+}
+
+.info h4{
+    font-size: 6vmin;
+    text-align: center;
+    margin: 10px;
+}
+
+.info h5{
+    font-size: 4vmin;
+    text-align: center;
+    margin: 10px;
+}
+
+.info p{
+    display: inline-block;
+}
+
+.info p a{
+    font-size: 20px;
+    text-decoration: none;
+    padding: 20px 100px;
+    display: inline-block;
+    color: #fff;
+}
+
+.info p a:hover, .info p a:focus{
+    font-weight: 700;
+}
+
+hr{
+    border: none;
+    width: 100%;
+    height: 1px;
+    background: #fff;
+}
+
+footer .copyright{
+    font-size: 22px;
+    text-align: center;
+    padding: 20px 0;
+}
+
     @media (min-width:45em){
         .product-image{
             float: right;
